--- a/assets/styles/mystyles.css
+++ b/assets/styles/mystyles.css
@@ -235,7 +235,14 @@ input {
 
 .top-left {
   position: absolute;
-  top: 8px;
-  left: 16px;
-  font-size: 18px;
+  top: 10px;
+  left: 20px;
 }
+
+.top-right{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 25px;
+}
+
